--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "@types/leaflet": "^1.9.12",
     "bootstrap": "^5.3.3",
     "echarts": "^5.5.1",
     "jwt-decode": "^4.0.0",
+    "leaflet": "^1.9.4",
     "ngx-echarts": "^18.0.0",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
